# stardust-pit

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml
src/: .prettierignore  eslint.config.js  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  engine.rs  engine_graph.rs  lib.rs  main.rs
src-tauri/tests/: rebind_live_device.rs
src-tauri/tests/fixtures/: v0.5.0-sine-show.json  v0.6.0-bound-show.json
src/.storybook/: main.ts
src/src/: App.tsx  index.css
src/src/components/patch-graph/: _catalog.ts  _types.ts  composite-block.tsx  context-menu.tsx  live-preview.tsx  node-body.tsx  node-library-panel.tsx  patch-canvas.tsx  patch-node.tsx  patch-outline.tsx  patch-port.tsx  patch-tab-rail.tsx  patch-title-bar.tsx  patch-wire.tsx  rig-context.ts  right-panel.tsx  source-binding-inspector.stories.tsx  source-binding-inspector.tsx  source-component-picker.stories.tsx  source-component-picker.tsx
src/src/components/perform/: click-indicator.tsx  layout-canvas-grid.stories.tsx  layout-canvas-grid.tsx  next-patch-preview.stories.tsx  next-patch-preview.tsx  panic-button.stories.tsx  panic-button.tsx  parameter-favorite.tsx  pre-show-validation.stories.tsx  show-notes-pane.stories.tsx  show-notes-pane.tsx  time-elapsed.stories.tsx  time-elapsed.tsx  transpose-indicator.tsx  vu-meter.tsx  (+2 more)
src/src/lib/: show-files.ts  tauri.ts  use-engine-status.ts  use-engine-sync.ts  use-learn.ts  use-midi-inputs.ts  use-plugin-scan.ts
src/src/screens/: _demo-data.ts  _seed-data.ts  patch-editor-v5.tsx  patch-editor.tsx  perform-layout.stories.tsx  perform-live.stories.tsx  program-patch-editor-v5.stories.tsx  program-patch-editor.stories.tsx  settings-screen.stories.tsx  settings-screen.tsx  setup-rig.stories.tsx  setup-rig.tsx
src/src/state/: settings-store.ts  show-store.ts
src/src/stories/: DesignTokens.stories.tsx
stardust-core/: Cargo.toml  tauri.conf.json
stardust-core/src/: lib.rs  main.rs
stardust-ui/: bun.lockb  index.html  package.json
stardust-ui/.storybook/: main.ts  preview.tsx
stardust-ui/src/: App.tsx  index.css
stardust-ui/src/stories/: DesignTokens.stories.tsx
(+137 files in other folders)
