[package]
name = "stardust-pit"
description = "Stardust app process: Tauri 2 host, Show/Song/Patch model, cascading settings, audio thread orchestration. Built on the stardust-core library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "stardust_pit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stardust"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["macos-private-api"] }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
stardust-core = { workspace = true }
